RESOLVED FIXED171087
com.apple.WebCore: non-virtual thunk to WebCore::LibWebRTCDataChannelHandler::OnBufferedAmountChange + 39
https://bugs.webkit.org/show_bug.cgi?id=171087
Summary com.apple.WebCore: non-virtual thunk to WebCore::LibWebRTCDataChannelHandler:...
Ryan Haddad
Reported 2017-04-20 16:00:43 PDT
This is a flaky crash seen with webrtc/datachannel/bufferedAmountLowThreshold.html Thread 17 Crashed:: Thread 0x0x7ff7a13a05 0 com.apple.WebCore 0x000000010e949ff7 non-virtual thunk to WebCore::LibWebRTCDataChannelHandler::OnBufferedAmountChange(unsigned long long) + 39 1 libwebrtc.dylib 0x000000010b529d05 webrtc::DataChannel::OnChannelReady(bool) + 37 (datachannel.cc:409) 2 libwebrtc.dylib 0x000000010b54fefe webrtc::WebRtcSession::OnSctpTransportReadyToSendData_s(bool) + 62 (webrtcsession.cc:1970) 3 libwebrtc.dylib 0x000000010b3f3fa4 rtc::AsyncInvoker::OnMessage(rtc::Message*) + 20 (asyncinvoker.cc:44) 4 libwebrtc.dylib 0x000000010b4d191f rtc::MessageQueue::Dispatch(rtc::Message*) + 255 (messagequeue.cc:539) 5 libwebrtc.dylib 0x000000010b5f8cdc rtc::Thread::Run() + 124 (thread.cc:327) 6 libwebrtc.dylib 0x000000010b5f897a rtc::Thread::PreRun(void*) + 170 (thread.cc:318) 7 libsystem_pthread.dylib 0x00007fffdc0fa9af _pthread_body + 180 8 libsystem_pthread.dylib 0x00007fffdc0fa8fb _pthread_start + 286 9 libsystem_pthread.dylib 0x00007fffdc0fa101 thread_start + 13 https://build.webkit.org/results/Apple%20Sierra%20Release%20WK1%20(Tests)/r215564%20(856)/webrtc/datachannel/bufferedAmountLowThreshold-crash-log.txt https://webkit-test-results.webkit.org/dashboards/flakiness_dashboard.html#showAllRuns=true&tests=webrtc%2Fdatachannel%2FbufferedAmountLowThreshold.html
Attachments
Patch (4.07 KB, patch)
2017-04-21 14:25 PDT, youenn fablet
no flags
Ryan Haddad
Comment 1 2017-04-20 16:01:10 PDT
youenn fablet
Comment 2 2017-04-21 14:25:41 PDT
WebKit Commit Bot
Comment 3 2017-04-21 17:56:08 PDT
Comment on attachment 307808 [details] Patch Clearing flags on attachment: 307808 Committed r215658: <http://trac.webkit.org/changeset/215658>
WebKit Commit Bot
Comment 4 2017-04-21 17:56:25 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.